--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "globals": "^16.4.0",
     "jest": "^29.7.0",
     "supertest": "^7.1.4"
-  }
+  },
+  "jest": {
+  "setupFilesAfterEnv": ["./setupTests.js"]
+}
 }
